--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "ws": "^8.18.0"
   },
   "scripts": {
